fix some bugs with vendor and order display details

--- a/BakeryVendor/Views/Orders/New.cshtml
+++ b/BakeryVendor/Views/Orders/New.cshtml
@@ -6,10 +6,10 @@
 
 <form action="/vendors/@Model.Id/orders" method="post">
   <input id="vendorId" name="vendorId" type="hidden" value="@Model.Id">
-  <label for="orderTitle">Order Title:</label>
-  <input id="orderTitle" name="orderTitle" type="text">
-  <label for="orderDescription">Order Description:</label>
-  <input id="orderDescription" name="orderDescription" type="text">
+  <label for="title">Order Title:</label>
+  <input id="title" name="title" type="text">
+  <label for="description">Order Description:</label>
+  <input id="description" name="description" type="text">
   <label for="numberLoaves">Number of loaves of bread ordered:</label>
   <input id="numberLoaves" name="numberLoaves" type="number">
   <label for="numberPastry">Number of pastry to be ordered:</label>
