--- a/BakeryVendor/Views/Home/Index.cshtml
+++ b/BakeryVendor/Views/Home/Index.cshtml
@@ -1,7 +1,14 @@
 @{
   Layout = "_Layout";
 }
-
-<h1>Pierre's Patisserie Vendors' Order Tracking System</h1>
-<h3><a href='/vendors'>View vendors</a></h3>
-<h3><a href='/vendors/new'>Add a new vendor</a></h3>
+<div class="containerSplash">
+  <div class="splashHeader">
+    <h1>Pierre's Patisserie Vendors' Order Tracking System</h1>
+  </div>
+  <div class="splashViewVend">
+    <h3><a href='/vendors'>View vendors</a></h3>
+  </div>
+  <div class="splashAddVend">
+    <h3><a href='/vendors/new'>Add a new vendor</a></h3>
+  </div>
+</div>
