--- a/BakeryVendor/Views/Home/Index.cshtml
+++ b/BakeryVendor/Views/Home/Index.cshtml
@@ -1,9 +1,10 @@
 @{
   Layout = "_Layout";
 }
-<div class="containerSplash">
+
+<div class="container">
   <div class="splashHeader">
-    <h1>Pierre's Patisserie Vendors' Order Tracking System</h1>
+    <h1>Vendors' Order Tracking System</h1>
   </div>
   <div class="splashViewVend">
     <h3><a href='/vendors'>View vendors</a></h3>
@@ -11,4 +12,5 @@
   <div class="splashAddVend">
     <h3><a href='/vendors/new'>Add a new vendor</a></h3>
   </div>
+  <img src="~/img/bakerylogo.png">
 </div>
