--- a/BakeryVendor/wwwroot/css/styles.css
+++ b/BakeryVendor/wwwroot/css/styles.css
@@ -1,9 +1,16 @@
-.containerSplash {
+body {
+  background-color: #fbf5e8;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 60%;
   margin: auto;
+  background-color: #fbf5e8;
+  color: #ac7849;
 }
 
 #footer {
@@ -11,13 +18,93 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: white;
-  color: teal;
+  background-color: #fbf5e8;
+  color: #ac7849;
   text-align: center;
   font-size: larger;
   padding-bottom: 3em;
 }
 
-.splashHeader {
-  margin-top: 10em;
+img {
+  height: fit-content;
+  width: auto;
+}
+
+.splashHeader, .vendorListHeader {
+  margin: 5em;
+  margin-bottom: 2em;
+  
+}
+
+.splashViewVend, .splashAddVend, .vendorList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 2em;
+}
+
+a {
+  color: #865e3c;
+}
+
+a:hover {
+  color: #cd7426;
+  text-decoration: overline;
+}
+
+.vendorReturnHome {
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.homeButton {
+  background-color: #ac7849;
+  color: #fbf5e8;
+  border-radius: 3%;
+  padding:5px, 0;
+}
+
+.homeButton:hover {
+  background-color: #fbf5e8;
+  color: #ac7849;
+  text-decoration: none;
+  text-transform:uppercase;
+}
+
+.newVendor {
+  font-size: 18px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.ordersLinks {
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.addVendorBtn {
+  text-align: center;
+  width: 50%;
+  margin-left: 25%;
+  margin-top: 1em;
+}
+
+.addOrderBtn {
+  width: auto;
+}
+
+.smallLogo {
+  height: auto;
+  width: 30%;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
